--- a/website/index.html
+++ b/website/index.html
@@ -2,101 +2,154 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Guppy</title>
-
-
   <link rel="stylesheet" href="Guppy.css" type="text/css">
-
 </head>
 
 
 <body>
 
+
 <div id="container">
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
+
   <tbody>
 
+
     <tr>
+
 
       <td><a href="#Screenshots">Screenshots</a></td>
 
+
       <td><a href="#Download_Guppy">Download</a></td>
+
 
       <td><a href="#Contributing">Contributing</a></td>
 
+
       <td><a href="#License">Licensing</a></td>
+
 
     </tr>
 
+
+  
   </tbody>
 </table>
+
 
 <h1>Guppy</h1>
 
+
 <br>
+
 
 <h2>What is Guppy</h2>
 
+
 Guppy is an application to download videos from the&nbsp;<a href="http://topfield.co.kr">Topfield TF5000PVRt</a>.
 Guppy was written because there was no graphical application available
-on Linux for downloading and uploading files to the Topfield PVR. The
+on GNU/Linux for downloading and uploading files to the Topfield PVR. The
 command line tool <a href="http://puppy.sourceforge.net">puppy</a>
 is used&nbsp;to communicate with the PVR.<br>
 
+
 <br>
+
 
 <h2><a name="Screenshots"></a>Screenshots</h2>
 
+
 <br>
+
 
 <table style="text-align: left; width: 462px; height: 122px;" border="0" cellpadding="2" cellspacing="2">
 
+
   <tbody>
+
 
     <tr>
 
+
       <td><a href="images/guppy_window.png"><img style="border: 0px solid ; width: 180px; height: 109px;" alt="Main Window" src="images/small-guppy_window.png"></a><br>
+
 
 Main Window</td>
 
+
       <td><a href="images/transfer.png"><img style="border: 0px solid ; width: 180px; height: 110px;" alt="Transfer in Progress" src="images/small-transfer.png"></a><br>
+
 
 File Transfer</td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
-<h2><a name="Download_Guppy"></a>Download Guppy</h2>
 
+<h2><a name="Download_Guppy"></a>Download</h2>
+Guppy<br>
+<ul>
+  <li>Version 0.0.1</li>
+  <ul>
+    <li><a href="releases/guppy-0.0.1.tar.bz2">guppy-0.0.1.tar.bz2</a></li>
+    <li><a href="releases/guppy-0.0.1.md5sum">MD5SUM</a></li>
+  </ul>
+</ul>
 <ul>
 
-  <li>Version <a href="releases/guppy-0.0.1.tar.bz2">0.0.1</a></li>
 
 </ul>
 
-<br>
+
+Puppy Source<br>
+<ul>
+  <li>Version <a href="releases/puppy/puppy-1.10.tar.bz2">1.10</a></li>
+  <ul>
+    <li>Note: Puppy does not work correctly when compiled with GCC 4.x. GCC 3.2 works fine.</li>
+  </ul>
+</ul>
+
 
 <h2><a name="Contributing"></a>Contributing</h2>
 
+
 Please send any bug reports or patches to&nbsp;<span style="text-decoration: underline;"><a href="mailto:tsui.tony@gmail.com">tsui.tony@gmail.com</a><br>
 
+
 <br>
+
 
 </span>
 <h2><a name="License"></a>License</h2>
 
+
 Guppy is licensed under the <a href="http://www.gnu.org/licenses/gpl.html">GNU General
 Public License</a><br>
 
+
 <br>
+
 
 <span style="text-decoration: underline;"></span>Copyright
 &copy; 2005 Tony Tsui
 </div>
+
 
 </body>
 </html>
